<?xml version="1.0"?>
<package format="2">
    <name>gunrobo_controller</name>
    <version>0.0.1</version>
    <description>The gunrobo_controller package</description>
    <maintainer email="todo@sample.com">kutei</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>
